--- a/src/components/BookingPage/ViewHotel/viewhotel.module.scss
+++ b/src/components/BookingPage/ViewHotel/viewhotel.module.scss
@@ -5,7 +5,9 @@
     width: 100%;
     height: 92vh;
 }
-
+.viewhotel_hotel_model__0rt47{
+    position: relative;
+}
 .placeholder__screen {
     width: 100%;
     height: 100%;
