--- a/src/styles/Booking.module.scss
+++ b/src/styles/Booking.module.scss
@@ -1,12 +1,13 @@
 
 .main{
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
     background-color:  rgb(207, 207, 212);
 }
 .viewhotel_div{
-    width: 65%;
+    flex: 3 1 800px;
 }
 @media (max-width:1115px) {
     .main{
